<resources>
    <string name="app_name">Meteo Center 2.0</string>
    <string name="windSpeed">00</string>
    <string name="windDirection">Направление</string>
    <string name="feelsLike">Ощущается:</string>
    <string name="weather">Weather</string>
    <string name="weatherGradus">00</string>
    <string name="dateDay">Today</string>
    <string name="city">Ulyanovsk</string>
    <string name="todoLeftArray">TODO</string>
    <string name="todoRigthArray">TODO</string>
</resources>
