<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#303644"
     >

    <TextView
        android:id="@+id/text"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:gravity="center"
        android:text="@string/city"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/array_left"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="58dp"
        android:background="#303644"
        android:scaleType="center"
        app:layout_constraintEnd_toStartOf="@+id/text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/todoLeftArray" />

    <ImageButton
        android:id="@+id/array_rigth"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="58dp"
        android:background="#303644"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/text"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/rigth_ic_foreground"
        android:contentDescription="@string/todoRigthArray" />

    <TextView
        android:id="@+id/weekDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/dateDay"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tempNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="248dp"
        android:gravity="center"
        android:text="@string/weatherGradus"
        android:textColor="#ffffff"
        android:textSize="90sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weatherCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:text="@string/weather"
        android:textColor="#ffffff"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tempNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weekDay" />

    <TextView
        android:id="@+id/feels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="465dp"
        android:gravity="center"
        android:text="@string/feelsLike"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempNum" />

    <TextView
        android:id="@+id/windDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:gravity="center"
        android:text="@string/windDirection"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feels" />

    <TextView
        android:id="@+id/windSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="210dp"
        android:text="@string/windSpeed"
        android:textColor="#ffffff"
        android:textSize="90sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>